--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
+  "arrowParens": "always",
+  "printWidth": 100,
   "semi": true,
-  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 120,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": true
 }
