--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx src --color",
+		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx src --color --fix",
 		"format": "prettier --write 'src/**/*.{ts,tsx,scss,css,json}'",
 		"isready": "npm run format && npm run lint && npm run build"
 	},
